# scientific_course

./: README.md
article_report/: Tectonic.toml
article_report/src/: _preamble.tex  index.tex  refs.bib
experiment_presentation/: Tectonic.toml
experiment_report/: Tectonic.toml
experiment_report/src/: _preamble.tex  index.tex
radar_processing/: main.py  to_csv.py
radar_processing/data/: donnees_01.mat  donnees_02.mat  donnees_03.mat  donnees_04.mat  donnees_05.mat  donnees_06.mat  donnees_07.mat  donnees_08.mat  donnees_09.mat  donnees_10.mat  donnees_11.mat  donnees_12.mat  donnees_13.mat  donnees_14.mat  donnees_15.mat  donnees_16.mat  donnees_vide_01.mat  donnees_vide_02.mat  donnees_vide_03.mat  donnees_vide_04.mat  donnees_vide_05.mat  donnees_vide_06.mat  donnees_vide_07.mat  donnees_vide_08.mat  donnees_vide_09.mat  donnees_vide_10.mat  donnees_vide_11.mat  donnees_vide_12.mat  donnees_vide_13.mat  donnees_vide_14.mat  donnees_vide_15.mat  donnees_vide_16.mat
radar_processing/data/csv/: donnees_0.csv  donnees_1.csv  donnees_10.csv  donnees_11.csv  donnees_12.csv  donnees_13.csv  donnees_14.csv  donnees_15.csv  donnees_2.csv  donnees_3.csv  donnees_4.csv  donnees_5.csv  donnees_6.csv  donnees_7.csv  donnees_8.csv  donnees_9.csv  donnees_vide_0.csv  donnees_vide_1.csv  donnees_vide_10.csv  donnees_vide_11.csv  donnees_vide_12.csv  donnees_vide_13.csv  donnees_vide_14.csv  donnees_vide_15.csv  donnees_vide_2.csv  donnees_vide_3.csv  donnees_vide_4.csv  donnees_vide_5.csv  (+4 more)
radar_processing_rs/: Cargo.toml
radar_processing_rs/src/: main.rs
