[package]
name = "radar_processing_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
csv = "1.1"
scilib = "0.4.1"
poloto = "11.1.6"
anyhow = "1.0.56"
clap = { version = "3.1", features = ["derive"] }